--- a/docs-2.0/nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
+++ b/docs-2.0/nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
@@ -598,6 +598,14 @@ nebula-console -addr nebula-graphd-svc.default.svc.cluster.local -port 9669 -u r
       - `-ssl_cert_path`: Specify the storage path of the TLS public key certificate.
       - `-ssl_private_key_path`: Specify the storage path of the TLS private key.
       - For details on using NebulaGraph Console to connect to the Graph service, see [Connect to NebulaGraph](../4.connect-to-nebula-graph-service.md).
+
+      !!! note
+
+            If you set `spec.console` to start a NebulaGraph Console container in the cluster, you can enter the console container and run the following command to connect to the Graph service.
+
+            ```bash
+            nebula-console -addr 10.98.xxx.xx  -port 9669 -u root -p nebula -enable_ssl -ssl_root_ca_path /path/to/cert/root.crt -ssl_cert_path /path/to/cert/client.crt -ssl_private_key_path /path/to/cert/client.key
+            ```
       
     At this point, you can enable mTLS in NebulaGraph.
 
