[TO BE REVIEWED]v3.5.0-sc core-zone updates (#2250)
* v3.5.0-sc core-zone updates

additions

v3.5.0-sc core-zone updates

* updates

* Update 5.zone.md

* Update docs-2.0/5.configurations-and-logs/1.configurations/2.meta-config.md

* fix comment

* comment fix and change routing to reading

* Update 3.graph-config.md

* commit fix

* comment fix

* Update docs-2.0/4.deployment-and-installation/5.zone.md

* Update 5.zone.md

* fix comments

--- a/docs-2.0/5.configurations-and-logs/1.configurations/2.meta-config.md
+++ b/docs-2.0/5.configurations-and-logs/1.configurations/2.meta-config.md
@@ -88,7 +88,7 @@ For all parameters and their current values, see [Configurations](1.configuratio
 
 | Name                       | Predefined Value      | Description                                                                   |Whether supports runtime dynamic modifications|
 | :------------------------- | :-------------------- | :---------------------------------------------------------------------------- |:----------------- |
-|`default_parts_num`         | `100`                 | Specifies the default partition number when creating a new graph space.       |  No|
+|`default_parts_num`         | `10`                 | Specifies the default partition number when creating a new graph space.       |  No|
 |`default_replica_factor`    | `1`                   | Specifies the default replica number when creating a new graph space.         |  No|
 
 ## RocksDB options configurations
@@ -110,5 +110,11 @@ For all parameters and their current values, see [Configurations](1.configuratio
 |`ng_black_box_home`      |`black_box`                     |The name of the directory to store Nebula-BBox file data.|  No|
 |`ng_black_box_dump_period_seconds`    |`5`                     |The time interval for Nebula-BBox to collect metric data. Unit: Second.|  No|
 |`ng_black_box_file_lifetime_seconds`    |`1800`                     |Storage time for Nebula-BBox files generated after collecting metric data. Unit: Second.|  Yes|
+
+## Zone configurations
+
+| Name                 | Predefined Value                    | Description                              |Whether supports runtime dynamic modifications|
+| :-------------------- | :----- | :------------------- | :--------------------- |
+| `zone_list` | Empty | A list of Zone names. When the value is not empty, the Zone feature is enabled. For details, see [Manage Zones](../../4.deployment-and-installation/5.zone.md).| No  |
 
 {{ ent.ent_end }}
