--- a/docs-2.0/3.ngql-guide/4.job-statements.md
+++ b/docs-2.0/3.ngql-guide/4.job-statements.md
@@ -52,6 +52,62 @@ nebula> SUBMIT JOB BALANCE DATA REMOVE 192.168.8.100:9779;
 +------------+
 ```
 
+## SUBMIT JOB BALANCE DATA IN ZONE 
+
+!!! enterpriseonly
+
+    Only available for the NebulaGraph Enterprise Edition.
+
+`SUBMIT JOB BALANCE DATA IN ZONE` statement starts a job to balance partition replicas within each Zone. It returns the job ID. 
+
+<!-- To balance partition replicas within a specified Zone, you need to add the `<zone_name>` option.  -->
+
+For details on zones, see [Manage Zones](../4.deployment-and-installation/5.zone.md).
+
+For example:
+
+```ngql
+# Balance partition replicas within each Zone in the current space.
+nebula> SUBMIT JOB BALANCE DATA IN ZONE;
++------------+
+| New Job Id |
++------------+
+| 25         |
++------------+
+```
+
+<!-- ```ngql
+# Balance partition replicas within a specified Zone.
+nebula> SUBMIT JOB BALANCE DATA IN ZONE az1;
++------------+
+| New Job Id |
++------------+
+| 26         |
++------------+
+``` -->
+
+## SUBMIT JOB BALANCE DATA IN ZONE REMOVE
+
+!!! enterpriseonly
+
+    Only available for the NebulaGraph Enterprise Edition.
+
+`SUBMIT JOB BALANCE DATA IN ZONE REMOVE` statement starts a job to clear the partitions on specified Storage nodes in Zones in the current graph space. It returns the job ID. Before clearing the Storage nodes, make sure that the remaining Storage nodes in Zones can meet the set number of replicas. For example, if the number of replicas is set to 3, make sure that the remaining Storage nodes are greater than or equal to 3 before executing this command.
+
+For details on Zones, see [Manage Zones](../4.deployment-and-installation/5.zone.md).
+
+For example:
+
+```ngql
+# Clear the partitions on the specified Storage nodes. 
+nebula> SUBMIT JOB BALANCE DATA IN ZONE REMOVE 192.168.10.101:9779,192.168.10.102:9779;
++------------+
+| New Job Id |
++------------+
+| 26         |
++------------+
+```
+
 {{ ent.ent_end }}
 
 ## SUBMIT JOB BALANCE LEADER
@@ -70,14 +126,14 @@ nebula> SUBMIT JOB BALANCE LEADER;
 ```
 
 <!-- balance-3.1
-## SUBMIT JOB BALANCE IN ZONE
+## SUBMIT JOB BALANCE DATA IN ZONE
 
-The `SUBMIT JOB BALANCE IN ZONE` statement starts a job to balance the distribution of storage partitions in each zone in the current graph space. It returns the job ID. You can use the `REMOVE` option to specify the Storage services that you want to clear for easy maintenance.
+The `SUBMIT JOB BALANCE DATA IN ZONE` statement starts a job to balance the distribution of storage partitions in each zone in the current graph space. It returns the job ID. You can use the `REMOVE` option to specify the Storage services that you want to clear for easy maintenance.
 
 For example:
 
 ```ngql
-nebula> SUBMIT JOB BALANCE IN ZONE REMOVE 192.168.10.102:9779;
+nebula> SUBMIT JOB BALANCE DATA IN ZONE REMOVE 192.168.10.102:9779;
 +------------+
 | New Job Id |
 +------------+
