--- a/docs-2.0/3.ngql-guide/9.space-statements/4.describe-space.md
+++ b/docs-2.0/3.ngql-guide/9.space-statements/4.describe-space.md
@@ -23,14 +23,18 @@ nebula> DESCRIBE SPACE basketballplayer;
 +----+--------------------+------------------+----------------+---------+------------+--------------------+---------+
 ```
 
-<!--
+{{ent.ent_begin}}
+
+If you specify Zones for a space, the `DESCRIBE SPACE` statement will show the Zone information of the space. For more information, see [Manage Zones](../../4.deployment-and-installation/5.zone.md).
+
+
 ```ngql
 nebula> DESCRIBE SPACE basketballplayer;
-+----+--------------------+------------------+----------------+---------+------------+--------------------+-------------+-------------------------------+---------+
-| ID | Name               | Partition Number | Replica Factor | Charset | Collate    | Vid Type           | Atomic Edge | Zones                         | Comment |
-+----+--------------------+------------------+----------------+---------+------------+--------------------+-------------+-------------------------------+---------+
-| 1  | "basketballplayer" | 10               | 1              | "utf8"  | "utf8_bin" | "FIXED_STRING(32)" | false       | "default_zone_127.0.0.1_9779" |         |
-+----+--------------------+------------------+----------------+---------+------------+--------------------+-------------+-------------------------------+---------+
++----+--------------------+------------------+----------------+---------+------------+--------------------+-----------------------+---------+
+| ID | Name               | Partition Number | Replica Factor | Charset | Collate    | Vid Type           | Zones                 | Comment |
++----+--------------------+------------------+----------------+---------+------------+--------------------+-----------------------+---------+
+| 51 | "basketballplayer" | 10               | 4              | "utf8"  | "utf8_bin" | "FIXED_STRING(32)" | ["az1", "az2", "az3"] |         |
++----+--------------------+------------------+----------------+---------+------------+--------------------+-----------------------+---------+
 ```
--->
+{{ent.ent_end}}
 
