--- a/docs-2.0/nebula-operator/1.introduction-to-nebula-operator.md
+++ b/docs-2.0/nebula-operator/1.introduction-to-nebula-operator.md
@@ -19,6 +19,7 @@ The following features are already available in NebulaGraph Operator:
 - **Deploy and uninstall clusters**: NebulaGraph Operator simplifies the process of deploying and uninstalling clusters for users. NebulaGraph Operator allows you to quickly create, update, or delete a NebulaGraph cluster by simply providing the corresponding CR file. For more information, see [Deploy NebulaGraph Clusters with Kubectl](3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md) or [Deploy NebulaGraph Clusters with Helm](3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md).
 
 {{ent.ent_begin}}
+- **Manage Zones**: Supports dividing multiple storage hosts into managed zones and creating graph spaces on specified storage hosts to achieve resource isolation. For more information, see [Create clusters using Zones with kubectl](3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md#create_clusters) or [Create clusters using Zones with Helm](3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md).
 
 - **Scale clusters**: NebulaGraph Operator calls NebulaGraph's native scaling interfaces in a control loop to implement the scaling logic. You can simply perform scaling operations with YAML configurations and ensure the stability of data. For more information, see [Scale clusters with Kubectl](3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md) or [Scale clusters with Helm](3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md).
 
@@ -40,7 +41,7 @@ NebulaGraph Operator does not support the v1.x version of NebulaGraph. NebulaGra
 
 | NebulaGraph   | NebulaGraph Operator |
 | ------------- | -------------------- |
-| 3.5.x         | 1.5.0                |
+| 3.5.x         | 1.5.0, 1.6.0         |
 | 3.0.0 ~ 3.4.1 | 1.3.0, 1.4.0 ~ 1.4.2 |
 | 3.0.0 ~ 3.3.x | 1.0.0, 1.1.0, 1.2.0  |
 | 2.5.x ~ 2.6.x | 0.9.0                |
