--- a/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
+++ b/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
@@ -447,8 +447,9 @@ In the process of downsizing the cluster, if the operation is not complete succe
 !!! caution
 
     - NebulaGraph Operator currently only supports scaling Graph and Storage services and does not support scale Meta services.
+    {{ent.ent_begin}}
     - If you scale in a cluster with Zones, make sure that the number of remaining storage pods is not less than the number of Zones specified in the `spec.metad.config.zone_list` field. Otherwise, the cluster will fail to start.
-
+    {{ent.ent_end}}
 
 {{ ent.ent_end }}
 
