update ssl & adds-on

--- a/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
+++ b/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
@@ -127,8 +127,14 @@
           --set nebula.metad.config.zone_list=<zone1,zone2,zone3> \
           --set nebula.graphd.config.prioritize_intra_zone_reading=true \
           --set nebula.graphd.config.stick_to_intra_zone_on_failure=false \
+          # Evenly distribute the Pods of the Storage service across Zones.
+          --set topologySpreadConstraints[0].topologyKey=kubernetes.io/zone
           --namespace="${NEBULA_CLUSTER_NAMESPACE}" \
       ```      
+
+      !!! caution
+
+          Make sure storage Pods are evenly distributed across zones before ingesting data by running `SHOW ZONES` in nebula-console. For zone-related commands, see [Zones](../../4.deployment-and-installation/5.zone.md).
 
   {{ent.ent_end}}
 
