--- a/docs-2.0/nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
+++ b/docs-2.0/nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
@@ -14,23 +14,20 @@ In the NebulaGraph environment running in Kubernetes, mutual TLS (mTLS) is used 
 
         In the cluster created using Operator, the client and server use the same CA root certificate by default. 
 
-## Encryption policies
+## Encryption scenarios
 
-NebulaGraph provides three encryption policies for mTLS:
+The following two scenarios are commonly used for encryption:
 
-- Encryption of data transmission between the client and the Graph service.
-  
-  This policy only involves encryption between the client and the Graph service and does not encrypt data transmission between other services in the cluster.
+- Encrypting communication between the client and the Graph service.
 
-- Encrypt the data transmission between clients, the Graph service, the Meta service, and the Storage service.
-  
-  This policy encrypts data transmission between the client, Graph service, Meta service, and Storage service in the cluster.
+- Encrypting communication between services, such as communication between the Graph service and the Meta service, communication between the Graph service and the Storage service, and communication between the Meta service and the Storage service.
 
-- Encryption of data transmission related to the Meta service within the cluster.
-  
-  This policy only involves encrypting data transmission related to the Meta service within the cluster and does not encrypt data transmission between other services or the client.
+  !!! note
 
-For different encryption policies, you need to configure different fields in the cluster configuration file. For more information, see [Authentication policies](../../7.data-security/4.ssl.md#authentication_policies).
+        - The Graph service in NebulaGraph is the entry point for all client requests. The Graph service communicates with the Meta service and the Storage service to complete the client requests. Therefore, the Graph service needs to be able to communicate with the Meta service and the Storage service.
+        - The Storage and Meta services in NebulaGraph communicate with each other through heartbeat messages to ensure their availability and health. Therefore, the Storage service needs to be able to communicate with the Meta service and vice versa.
+
+For all encryption scenarios, see [Authentication policies](../../7.data-security/4.ssl.md#authentication_policies).
 
 ## mTLS with certificate hot-reloading
 
@@ -38,7 +35,7 @@ NebulaGraph Operator supports enabling mTLS with certificate hot-reloading. The 
 
 ### Sample configurations
 
-??? info "Expand to view the sample configurations of mTLS"
+??? info "View sample configurations of mTLS between the client and the Graph service"
 
     ```yaml
     apiVersion: apps.nebula-graph.io/v1alpha1
@@ -52,18 +49,11 @@ NebulaGraph Operator supports enabling mTLS with certificate hot-reloading. The 
         maxRequests: 20
       graphd:
         config:
-          accept_partial_success: "true"
           ca_client_path: certs/root.crt
           ca_path: certs/root.crt
           cert_path: certs/server.crt
-          enable_graph_ssl: "true"
-          enable_intra_zone_routing: "true"
           key_path: certs/server.key
-          logtostderr: "1"
-          redirect_stdout: "false"
-          stderrthreshold: "0"
-          stick_to_intra_zone_on_failure: "true"
-          timestamp_in_logfile_name: "false"    
+          enable_graph_ssl: "true"
         initContainers:
           - name: init-auth-sidecar
             command:
@@ -72,14 +62,14 @@ NebulaGraph Operator supports enabling mTLS with certificate hot-reloading. The 
             args:
               - cp /certs/* /credentials/
             imagePullPolicy: Always
-            image: reg.vesoft-inc.com/cloud-dev/nebula-certs:latest
+            image: reg.vesoft-inc.com/xxx/xxx:latest
             volumeMounts:
               - name: credentials
                 mountPath: /credentials
         sidecarContainers:
           - name: auth-sidecar
             imagePullPolicy: Always
-            image: reg.vesoft-inc.com/cloud-dev/nebula-certs:latest
+            image: reg.vesoft-inc.com/xxx/xxx:latest
             volumeMounts:
               - name: credentials
                 mountPath: /credentials
@@ -158,13 +148,201 @@ NebulaGraph Operator supports enabling mTLS with certificate hot-reloading. The 
         - name: nebula-image
       enablePVReclaim: true
       topologySpreadConstraints:
+      - topologyKey: "kubernetes.io/zone"
+        whenUnsatisfiable: "ScheduleAnyway"
+    ```
+
+??? info "View sample configurations of mTLS between services"
+
+    ```yaml
+    apiVersion: apps.nebula-graph.io/v1alpha1
+    kind: NebulaCluster
+    metadata:
+      name: nebula
+    spec:
+      exporter:
+        image: vesoft/nebula-stats-exporter
+        replicas: 1
+        maxRequests: 20
+      sslCerts:
+        clientSecret: "client-cert"
+        caSecret: "ca-cert" # The Secret name of the CA certificate.
+        caCert: "root.crt"
+      graphd:
+        config:
+          ca_client_path: certs/root.crt
+          ca_path: certs/root.crt
+          cert_path: certs/server.crt
+          key_path: certs/server.key
+          enable_meta_ssl: "true"
+          enable_storage_ssl: "true" 
+        initContainers:
+          - name: init-auth-sidecar
+            command:
+              - /bin/sh
+              - -c
+            args:
+              - cp /certs/* /credentials/
+            imagePullPolicy: Always
+            image: reg.vesoft-inc.com/xxx/xxx:latest
+            volumeMounts:
+              - name: credentials
+                mountPath: /credentials
+        sidecarContainers:
+          - name: auth-sidecar
+            imagePullPolicy: Always
+            image: reg.vesoft-inc.com/xxx/xxx:latest
+            volumeMounts:
+              - name: credentials
+                mountPath: /credentials
+        volumes:
+          - name: credentials
+            emptyDir:
+              medium: Memory
+        volumeMounts:
+          - name: credentials
+            mountPath: /usr/local/nebula/certs
+        logVolumeClaim:
+          resources:
+            requests:
+              storage: 1Gi
+          storageClassName: local-path
+        resources:
+          requests:
+            cpu: "200m"
+            memory: "500Mi"
+          limits:
+            cpu: "1"
+            memory: "1Gi"
+        replicas: 1
+        image: reg.vesoft-inc.com/rc/nebula-graphd-ent
+        version: v3.5.0-sc
+      metad:
+        config:
+          ca_client_path: certs/root.crt
+          ca_path: certs/root.crt
+          cert_path: certs/server.crt
+          key_path: certs/server.key
+          enable_meta_ssl: "true"
+          enable_storage_ssl: "true"  
+        initContainers:
+          - name: init-auth-sidecar
+            command:
+              - /bin/sh
+              - -c
+            args:
+              - cp /certs/* /credentials/
+            imagePullPolicy: Always
+            image: reg.vesoft-inc.com/xxx/xxx:latest
+            volumeMounts:
+              - name: credentials
+                mountPath: /credentials
+        sidecarContainers:
+          - name: auth-sidecar
+            imagePullPolicy: Always
+            image: reg.vesoft-inc.com/xxx/xxx:latest
+            volumeMounts:
+              - name: credentials
+                mountPath: /credentials
+        volumes:
+          - name: credentials
+            emptyDir:
+              medium: Memory
+        volumeMounts:
+          - name: credentials
+            mountPath: /usr/local/nebula/certs
+        licenseManagerURL: "192.168.8.xx:9119"
+        resources:
+          requests:
+            cpu: "300m"
+            memory: "500Mi"
+          limits:
+            cpu: "1"
+            memory: "1Gi"
+        replicas: 1
+        image: reg.vesoft-inc.com/rc/nebula-metad-ent
+        version: v3.5.0-sc
+        dataVolumeClaim:
+          resources:
+            requests:
+              storage: 2Gi
+          storageClassName: local-path
+        logVolumeClaim:
+          resources:
+            requests:
+              storage: 1Gi
+          storageClassName: local-path
+      storaged:
+        config:
+          ca_client_path: certs/root.crt
+          ca_path: certs/root.crt
+          cert_path: certs/server.crt
+          key_path: certs/server.key
+          enable_meta_ssl: "true"
+          enable_storage_ssl: "true"  
+        initContainers:
+          - name: init-auth-sidecar
+            command:
+              - /bin/sh
+              - -c
+            args:
+              - cp /certs/* /credentials/
+            imagePullPolicy: Always
+            image: reg.vesoft-inc.com/xxx/xxx:latest
+            volumeMounts:
+              - name: credentials
+                mountPath: /credentials
+        sidecarContainers:
+          - name: auth-sidecar
+            imagePullPolicy: Always
+            image: reg.vesoft-inc.com/xxx/xxx:latest
+            volumeMounts:
+              - name: credentials
+                mountPath: /credentials
+        volumes:
+          - name: credentials
+            emptyDir:
+              medium: Memory
+        volumeMounts:
+          - name: credentials
+            mountPath: /usr/local/nebula/certs
+        resources:
+          requests:
+            cpu: "300m"
+            memory: "500Mi"
+          limits:
+            cpu: "1"
+            memory: "1Gi"
+        replicas: 1
+        image: reg.vesoft-inc.com/rc/nebula-storaged-ent
+        version: v3.5.0-sc
+        dataVolumeClaims:
+          - resources:
+              requests:
+                storage: 2Gi
+            storageClassName: local-path
+        logVolumeClaim:
+          resources:
+            requests:
+              storage: 1Gi
+          storageClassName: local-path
+        enableAutoBalance: true
+      reference:
+        name: statefulsets.apps
+        version: v1
+      schedulerName: default-scheduler
+      imagePullPolicy: Always
+      imagePullSecrets:
+        - name: nebula-image
+      enablePVReclaim: true
+      topologySpreadConstraints:
       - topologyKey: "kubernetes.io/hostname"
         whenUnsatisfiable: "ScheduleAnyway"
     ```
 
 ### Configure `spec.<meta|graph|storage>.config`
 
-To enable mTLS between the client and the Graph service, configure the `spec.graphd.config` field in the cluster configuration file. The paths specified in fields with `*_path` correspond to file paths relative to `/user/local/nebula`. **It's important to avoid using absolute paths to prevent path recognition errors.**
+To enable mTLS between the client and the Graph service, add the following fields under the `spec.graphd.config` in the cluster configuration file. The paths specified in fields with `*_path` correspond to file paths relative to `/user/local/nebula`. **It's important to avoid using absolute paths to prevent path recognition errors.**
 
 ```yaml
 spec:
@@ -173,15 +351,11 @@ spec:
       ca_client_path: certs/root.crt
       ca_path: certs/root.crt
       cert_path: certs/server.crt
-      enable_graph_ssl: "true"
       key_path: certs/server.key
+      enable_graph_ssl: "true"
 ```
 
-For the configurations of the other two authentication policies:
-
-- To enable mTLS between the client, the Graph service, the Meta service, and the Storage service:
-  
-  Configure the `spec.metad.config`, `spec.graphd.config`, and `spec.storaged.config` fields in the cluster configuration file.
+To enable mTLS between services (Graph, Meta, and Storage), add the following fields under the `spec.metad.config`, `spec.graphd.config`, and `spec.storaged.config` respectively in the cluster configuration file.
 
   ```yaml
   spec:
@@ -190,60 +364,37 @@ For the configurations of the other two authentication policies:
         ca_client_path: certs/root.crt
         ca_path: certs/root.crt
         cert_path: certs/server.crt
-        enable_ssl: "true"
         key_path: certs/server.key
+        enable_meta_ssl: "true"
+        enable_storage_ssl: "true"
     metad:
       config:
         ca_client_path: certs/root.crt
         ca_path: certs/root.crt
         cert_path: certs/server.crt
-        enable_ssl: "true"
         key_path: certs/server.key
+        enable_meta_ssl: "true"
+        enable_storage_ssl: "true"
     storaged:
       config:
         ca_client_path: certs/root.crt
         ca_path: certs/root.crt
         cert_path: certs/server.crt
-        enable_ssl: "true"
         key_path: certs/server.key
+        enable_meta_ssl: "true"
+        enable_storage_ssl: "true"
   ```
-
-- To enable mTLS related to the Meta service:
-  
-  Configure the `spec.metad.config`, `spec.graphd.config`, and `spec.storaged.config` fields in the cluster configuration file.
-
-  ```yaml
-  spec:
-    graph:
-      config:
-        ca_client_path: certs/root.crt
-        ca_path: certs/root.crt
-        cert_path: certs/server.crt
-        enable_meta_ssl: "true"
-        key_path: certs/server.key
-    metad:
-      config:
-        ca_client_path: certs/root.crt
-        ca_path: certs/root.crt
-        cert_path: certs/server.crt
-        enable_meta_ssl: "true"
-        key_path: certs/server.key
-    storaged:
-      config:
-        ca_client_path: certs/root.crt
-        ca_path: certs/root.crt
-        cert_path: certs/server.crt
-        enable_meta_ssl: "true"
-        key_path: certs/server.key
-  ```  
 
 ### Configure `initContainers`, `sidecarContainers`, `volumes`, and `volumeMounts`
 
-`initContainers`, `sidecarContainers`, `volumes`, and `volumeMounts` fields are essential for implementing mTLS certificate online hot-reloading. For the encryption scenario where only the Graph service needs to be encrypted, you need to configure `initContainers`, `sidecarContainers`, `volumes`, and `volumeMounts` under `spec.graph.config`. 
+`initContainers`, `sidecarContainers`, `volumes`, and `volumeMounts` fields are essential for implementing mTLS certificate online hot-reloading. 
+
+- For the encryption scenario where only the Graph service needs to be encrypted, configure these fields under `spec.graph.config`. 
+- For the encryption scenario where the Graph service, Meta service, and Storage service need to be encrypted, configure these fields under `spec.graph.config`, `spec.storage.config`, and `spec.meta.config` respectively.
 
 #### `initContainers`
 
-The `initContainers` field is utilized to configure an init-container responsible for generating certificate files. Note that the `volumeMounts` field specifies how the `credentials` volume, shared with the NebulaGraph container, is mounted, providing read and write access. 
+The `initContainers` field is utilized to configure an init-container responsible for generating certificate files. Note that the `volumeMounts` field specifies how a volume specified by `volumes`, shared with the NebulaGraph container, is mounted, providing read and write access. 
 
 In the following example, `init-auth-sidecar` performs the task of copying files from the `certs` directory within the image to `/credentials`. After this task is completed, the init-container exits. 
 
@@ -258,7 +409,7 @@ initContainers:
     args:
       - cp /certs/* /credentials/
     imagePullPolicy: Always
-    image: reg.vesoft-inc.com/cloud-dev/nebula-certs:latest
+    image: reg.vesoft-inc.com/xxx/xxx:latest
     volumeMounts:
       - name: credentials
         mountPath: /credentials
@@ -266,7 +417,7 @@ initContainers:
 
 #### `sidecarContainers`
 
-The `sidecarContainers` field is dedicated to periodically monitoring the expiration time of certificates and, when they are near expiration, generating new certificates to replace the existing ones. This process ensures seamless online certificate hot-reloading without any service interruptions. The `volumeMounts` field specifies how the `credentials` volume is mounted, and this volume is shared with the NebulaGraph container.
+The `sidecarContainers` field is dedicated to periodically monitoring the expiration time of certificates and, when they are near expiration, generating new certificates to replace the existing ones. This process ensures seamless online certificate hot-reloading without any service interruptions. The `volumeMounts` field specifies how a volume is mounted, and this volume is shared with the NebulaGraph container.
 
 In the example provided, the `auth-sidecar` container employs the `crond` process, which runs a crontab script every minute. This script checks the certificate's expiration status using the `openssl x509 -noout -enddate` command. 
 
@@ -276,7 +427,7 @@ Example:
 sidecarContainers:
 - name: auth-sidecar
   imagePullPolicy: Always
-  image: reg.vesoft-inc.com/cloud-dev/nebula-certs:latest
+  image: reg.vesoft-inc.com/xxx/xxx:latest
   volumeMounts:
     - name: credentials
       mountPath: /credentials
@@ -309,9 +460,9 @@ volumeMounts:
 
 ### Configure `sslCerts`
 
-The `spec.sslCerts` field specifies the encrypted certificates for NebulaGraph Operator and the [nebula-agent](https://github.com/vesoft-inc/nebula-agent) client (if you do not use the default nebula-agent image in Operator).
+When you enable mTLS between services, you still needs to set `spec.sslCerts`, because NebulaGraph Operator communicates with the Graph service, Meta service, and Storage service, 
 
-For the other two scenarios where the Graph service, Meta service, and Storage service need to be encrypted, and where only the Meta service needs to be encrypted, you not only need to configure `initContainers`, `sidecarContainers`, `volumes`, and `volumeMounts` under `spec.graph.config`, `spec.storage.config`, and `spec.meta.config`, but also configure `spec.sslCerts`. 
+The `spec.sslCerts` field specifies the encrypted certificates for NebulaGraph Operator and the [nebula-agent](https://github.com/vesoft-inc/nebula-agent) client (if you do not use the default nebula-agent image in Operator).
 
 ```yaml
 spec:
