--- a/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
+++ b/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
@@ -108,8 +108,122 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
     === "Cluster with Zones"
 
         NebulaGraph Operator supports creating a cluster with [Zones](../../4.deployment-and-installation/5.zone.md). 
+
+        ??? info "Expand to view sample cluster configurations"
+
+            ```yaml
+            apiVersion: apps.nebula-graph.io/v1alpha1
+            kind: NebulaCluster
+            metadata:
+              name: nebula
+              namespace: default
+            spec:
+              # Used to obtain the Zone information where nodes are located.
+              alpineImage: "reg.vesoft-inc.com/cloud-dev/nebula-alpine:latest"
+              # Used for backup and recovery as well as log cleanup functions. 
+              # If you do not customize this configuration,
+              # the default configuration will be used.
+              agent:
+                image: reg.vesoft-inc.com/cloud-dev/nebula-agent
+                version: v3.6.0-sc
+              exporter:
+                image: vesoft/nebula-stats-exporter
+                replicas: 1
+                maxRequests: 20
+              # Used to create a console container,
+              # which is used to connect to the NebulaGraph cluster.
+              console:
+                version: "nightly"
+              graphd:
+                config:
+                  # The following parameters are required for creating a cluster with Zones.
+                  accept_partial_success: "true"
+                  prioritize_intra_zone_reading: "true"
+                  sync_meta_when_use_space: "true"
+                  stick_to_intra_zone_on_failure: "false" 
+                  session_reclaim_interval_secs: "300"
+                  # The following parameters are required for collecting logs.
+                  logtostderr: "1"
+                  redirect_stdout: "false"
+                  stderrthreshold: "0" 
+                resources:
+                  requests:
+                    cpu: "2"
+                    memory: "2Gi"
+                  limits:
+                    cpu: "2"
+                    memory: "2Gi"
+                replicas: 1
+                image: reg.vesoft-inc.com/rc/nebula-graphd-ent
+                version: v3.5.0-sc
+              metad:
+                config:
+                  redirect_stdout: "false"
+                  stderrthreshold: "0"
+                  logtostder: "true"
+                  # Zone names CANNOT be modified once set.
+                  # It's suggested to set an odd number of Zones.
+                  zone_list: az1,az2,az3 
+                  validate_session_timestamp: "false"
+                # LM access address and port number.
+                licenseManagerURL: "192.168.8.xxx:9119"
+                resources:
+                  requests:
+                    cpu: "300m"
+                    memory: "500Mi"
+                  limits:
+                    cpu: "1"
+                    memory: "1Gi"
+                replicas: 3
+                image: reg.vesoft-inc.com/rc/nebula-metad-ent
+                version: v3.5.0-sc
+                dataVolumeClaim:
+                  resources:
+                    requests:
+                      storage: 2Gi
+                  storageClassName: local-path
+              storaged:
+                config:
+                  redirect_stdout: "false"
+                  stderrthreshold: "0"
+                  logtostder: "true"
+                resources:
+                  requests:
+                    cpu: "1"
+                    memory: "1Gi"
+                  limits:
+                    cpu: "2"
+                    memory: "2Gi"
+                replicas: 3
+                image: reg.vesoft-inc.com/rc/nebula-storaged-ent
+                version: v3.5.0-sc
+                dataVolumeClaims:
+                - resources:
+                    requests:
+                      storage: 2Gi
+                  storageClassName: local-path
+                enableAutoBalance: true
+              reference:
+                name: statefulsets.apps
+                version: v1
+              schedulerName: nebula-scheduler
+              nodeSelector:
+                nebula: cloud
+              imagePullPolicy: Always
+              imagePullSecrets:
+              - name: nebula-image
+              # Evenly distribute storage Pods across Zones. 
+              # Must be set when using Zones.
+              topologySpreadConstraints:
+              - topologyKey: "topology.kubernetes.io/zone"
+                whenUnsatisfiable: "DoNotSchedule"
+            ```  
+
+        !!! caution
+
+            Make sure storage Pods are evenly distributed across zones before ingesting data by running `SHOW ZONES` in nebula-console. For zone-related commands, see [Zones](../../4.deployment-and-installation/5.zone.md).
         
-        You must set the following parameters for creating a cluster with Zones. Other parameters can be changed as needed. For more information on other parameters, see the [sample configuration](https://github.com/vesoft-inc/nebula-operator/blob/v{{operator.release}}/config/samples/apps_v1alpha1_nebulacluster.yaml). 
+        You must set the following parameters for creating a cluster with Zones. Other parameters can be changed as needed.       
 
         | Parameter    | Default value  | Description    |
         | :---- | :--- | :--- |
@@ -118,8 +232,9 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
         |`spec.imagePullSecrets`| - |Specifies the Secret for pulling the NebulaGraph Enterprise service images from a private repository.|
         |`spec.alpineImage`|`reg.vesoft-inc.com/nebula-alpine:latest`|The Alpine Linux image, used to obtain the Zone information where nodes are located.| 
         |`spec.metad.config.zone_list`|-|A list of zone names, split by comma. For example: zone1,zone2,zone3. <br/>**Zone names CANNOT be modified once be set.**|
-        |`spec.graphd.config.prioritize_intra_zone_reading`|`false`|Specifies whether to prioritize sending queries to the storage nodes in the same zone.<br/>When set to `true`, the query is sent to the storage nodes in the same zone. If reading fails in that Zone, it will decide based on `stick_to_intra_zone_on_failure` whether to read the leader partition replica data from other Zones. |
+        |`spec.graphd.config.prioritize_intra_zone_reading`|`false`|Specifies whether to prioritize sending queries to the storage pods in the same zone.<br/>When set to `true`, the query is sent to the storage pods in the same zone. If reading fails in that Zone, it will decide based on `stick_to_intra_zone_on_failure` whether to read the leader partition replica data from other Zones. |
         |`spec.graphd.config.stick_to_intra_zone_on_failure`|`false`|Specifies whether to stick to intra-zone routing if unable to find the requested partitions in the same zone. When set to `true`, if unable to find the partition replica in that Zone, it does not read data from other Zones.|
+        |`spec.topologySpreadConstraints[0].topologyKey`|``| It is a field in Kubernetes used to control the distribution of storage Pods. Its purpose is to ensure that your storage Pods are evenly spread across Zones. <br/>To use the Zone feature, you must set the value to `topology.kubernetes.io/zone`. Run `kubectl get node --show-labels` to check the key. For more information, see [TopologySpread](https://kubernetes.io/docs/concepts/scheduling-eviction/topology-spread-constraints/#example-multiple-topologyspreadconstraints).|
 
         ???+ note "Learn more about Zones in NebulaGraph Operator"
 
@@ -173,169 +288,6 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
         |`spec.storaged.enableAutoBalance`| `false`| Specifies whether to enable automatic data balancing. For more information, see [Balance storage data after scaling out](../8.custom-cluster-configurations/8.3.balance-data-when-scaling-storage.md).|
         |`spec.enableBR`|`false`|Specifies whether to enable the BR tool. For more information, see [Backup and restore](../10.backup-restore-using-operator.md).|
         |`spec.graphd.enable_graph_ssl`|`false`| Specifies whether to enable SSL for the Graph service. For more details, see [Enable mTLS](../8.custom-cluster-configurations/8.5.enable-ssl.md). |
-
-
-        ??? info "Expand to view sample cluster configurations"
-
-            ```yaml
-            apiVersion: apps.nebula-graph.io/v1alpha1
-            kind: NebulaCluster
-            metadata:
-              name: nebula
-              namespace: default
-            spec:
-              alpineImage: "reg.vesoft-inc.com/cloud-dev/nebula-alpine:latest"
-              agent:
-                image: reg.vesoft-inc.com/cloud-dev/nebula-agent
-                version: v3.6.0-sc
-              exporter:
-                image: vesoft/nebula-stats-exporter
-                replicas: 1
-                maxRequests: 20
-              console:
-                version: "nightly"
-              graphd:
-                config:
-                  accept_partial_success: "true"
-                  ca_client_path: certs/root.crt
-                  ca_path: certs/root.crt
-                  cert_path: certs/server.crt
-                  key_path: certs/server.key
-                  enable_graph_ssl: "true"
-                  prioritize_intra_zone_reading: "true"
-                  stick_to_intra_zone_on_failure: "true" 
-                  logtostderr: "1"
-                  redirect_stdout: "false"
-                  stderrthreshold: "0" 
-                initContainers:
-                  - name: init-auth-sidecar
-                    imagePullPolicy: IfNotPresent
-                    image: 496756745489.dkr.ecr.us-east-1.amazonaws.com/auth-sidecar:v1.60.0
-                    env:
-                      - name: AUTH_SIDECAR_CONFIG_FILENAME
-                        value: sidecar-init
-                    volumeMounts:
-                      - name: credentials 
-                        mountPath: /credentials 
-                      - name: auth-sidecar-config 
-                        mountPath: /etc/config 
-                sidecarContainers:
-                  - name: auth-sidecar
-                    image: 496756745489.dkr.ecr.us-east-1.amazonaws.com/auth-sidecar:v1.60.0
-                    imagePullPolicy: IfNotPresent
-                    resources:
-                      requests:
-                        cpu: 100m
-                        memory: 500Mi
-                    env:
-                      - name: LOCAL_POD_IP
-                        valueFrom:
-                          fieldRef:
-                            fieldPath: status.podIP
-                      - name: LOCAL_POD_NAME
-                        valueFrom:
-                          fieldRef:
-                            fieldPath: metadata.name
-                      - name: LOCAL_POD_NAMESPACE
-                        valueFrom:
-                          fieldRef:
-                            fieldPath: metadata.namespace
-                    readinessProbe:
-                      httpGet:
-                        path: /ready
-                        port: 8086
-                      initialDelaySeconds: 5
-                      periodSeconds: 10
-                      successThreshold: 1
-                      failureThreshold: 3
-                    livenessProbe:
-                      httpGet:
-                        path: /live
-                        port: 8086
-                      initialDelaySeconds: 5
-                      periodSeconds: 10
-                      successThreshold: 1
-                      failureThreshold: 3
-                    volumeMounts:
-                      - name: credentials 
-                        mountPath: /credentials 
-                      - name: auth-sidecar-config 
-                        mountPath: /etc/config 
-                volumes: 
-                  - name: credentials
-                    emptyDir:
-                      medium: Memory
-                volumeMounts: 
-                  - name: credentials
-                    mountPath: /usr/local/nebula/certs
-                resources:
-                  requests:
-                    cpu: "2"
-                    memory: "2Gi"
-                  limits:
-                    cpu: "2"
-                    memory: "2Gi"
-                replicas: 1
-                image: reg.vesoft-inc.com/rc/nebula-graphd-ent
-                version: v3.5.0-sc
-              metad:
-                config:
-                  redirect_stdout: "false"
-                  stderrthreshold: "0"
-                  logtostder: "true"
-                  # Zone names CANNOT be modified once set.
-                  # It's suggested to set an odd number of Zones.
-                  zone_list: az1,az2,az3 
-                licenseManagerURL: "192.168.8.xxx:9119"
-                resources:
-                  requests:
-                    cpu: "300m"
-                    memory: "500Mi"
-                  limits:
-                    cpu: "1"
-                    memory: "1Gi"
-                replicas: 3
-                image: reg.vesoft-inc.com/rc/nebula-metad-ent
-                version: v3.5.0-sc
-                dataVolumeClaim:
-                  resources:
-                    requests:
-                      storage: 2Gi
-                  storageClassName: local-path
-              storaged:
-                config:
-                  redirect_stdout: "false"
-                  stderrthreshold: "0"
-                  logtostder: "true"
-                resources:
-                  requests:
-                    cpu: "1"
-                    memory: "1Gi"
-                  limits:
-                    cpu: "2"
-                    memory: "2Gi"
-                replicas: 3
-                image: reg.vesoft-inc.com/rc/nebula-storaged-ent
-                version: v3.5.0-sc
-                dataVolumeClaims:
-                - resources:
-                    requests:
-                      storage: 2Gi
-                  storageClassName: local-path
-                enableAutoBalance: true
-              reference:
-                name: statefulsets.apps
-                version: v1
-              schedulerName: nebula-scheduler
-              nodeSelector:
-                nebula: cloud
-              imagePullPolicy: Always
-              imagePullSecrets:
-              - name: nebula-image
-              topologySpreadConstraints:
-              - topologyKey: "topology.kubernetes.io/zone"
-                whenUnsatisfiable: "DoNotSchedule"
-            ```
 
   {{ ent.ent_end }}
 
