--- a/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
+++ b/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
@@ -128,7 +128,7 @@
           --set nebula.graphd.config.prioritize_intra_zone_reading=true \
           --set nebula.graphd.config.stick_to_intra_zone_on_failure=false \
           # Evenly distribute the Pods of the Storage service across Zones.
-          --set topologySpreadConstraints[0].topologyKey=kubernetes.io/zone
+          --set topologySpreadConstraints[0].topologyKey.kubernetes.io/zone \
           --namespace="${NEBULA_CLUSTER_NAMESPACE}" \
       ```      
 
