--- a/docs-2.0/nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
+++ b/docs-2.0/nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
@@ -24,16 +24,16 @@ The following two scenarios are commonly used for encryption:
 
   !!! note
 
-        - The Graph service in NebulaGraph is the entry point for all client requests. The Graph service communicates with the Meta service and the Storage service to complete the client requests. Therefore, the Graph service needs to be able to communicate with the Meta service and the Storage service.
-        - The Storage and Meta services in NebulaGraph communicate with each other through heartbeat messages to ensure their availability and health. Therefore, the Storage service needs to be able to communicate with the Meta service and vice versa.
+      - The Graph service in NebulaGraph is the entry point for all client requests. The Graph service communicates with the Meta service and the Storage service to complete the client requests. Therefore, the Graph service needs to be able to communicate with the Meta service and the Storage service.
+      - The Storage and Meta services in NebulaGraph communicate with each other through heartbeat messages to ensure their availability and health. Therefore, the Storage service needs to be able to communicate with the Meta service and vice versa.
 
 For all encryption scenarios, see [Authentication policies](../../7.data-security/4.ssl.md#authentication_policies).
 
 ## mTLS with certificate hot-reloading
 
-NebulaGraph Operator supports enabling mTLS with certificate hot-reloading. The following provides an example of the configuration file to enable mTLS between the client and the Graph service.
+NebulaGraph Operator supports enabling mTLS with certificate hot-reloading.
 
-### Sample configurations
+The following provides examples of the configuration file to enable mTLS between the client and the Graph service, and between services.
 
 ??? info "View sample configurations of mTLS between the client and the Graph service"
 
@@ -44,16 +44,23 @@ NebulaGraph Operator supports enabling mTLS with certificate hot-reloading. The 
       name: nebula
     spec:
       exporter:
-        image: vesoft/nebula-stats-exporter
+        image: vesoft/xxx
         replicas: 1
         maxRequests: 20
       graphd:
         config:
+          # The following parameters are used to enable mTLS between the client and the Graph service.
           ca_client_path: certs/root.crt
           ca_path: certs/root.crt
           cert_path: certs/server.crt
           key_path: certs/server.key
           enable_graph_ssl: "true"
+          # The following parameters are required for creating a cluster with Zones.
+          accept_partial_success: "true"
+          prioritize_intra_zone_reading: "true"
+          sync_meta_when_use_space: "true"
+          stick_to_intra_zone_on_failure: "false" 
+          session_reclaim_interval_secs: "300"
         initContainers:
           - name: init-auth-sidecar
             command:
@@ -93,10 +100,14 @@ NebulaGraph Operator supports enabling mTLS with certificate hot-reloading. The 
             cpu: "1"
             memory: "1Gi"
         replicas: 1
-        image: reg.vesoft-inc.com/rc/nebula-graphd-ent
+        image: reg.vesoft-inc.com/xxx/xxx
         version: v3.5.0-sc
       metad:
-        licenseManagerURL: "192.168.8.53:9119"
+        # Zone names CANNOT be modified once set.
+        # It's suggested to set an odd number of Zones.
+        zone_list: az1,az2,az3 
+        validate_session_timestamp: "false"
+        licenseManagerURL: "192.168.8.xxx:9119"
         resources:
           requests:
             cpu: "300m"
@@ -105,7 +116,7 @@ NebulaGraph Operator supports enabling mTLS with certificate hot-reloading. The 
             cpu: "1"
             memory: "1Gi"
         replicas: 1
-        image: reg.vesoft-inc.com/rc/nebula-metad-ent
+        image: reg.vesoft-inc.com/xxx/xxx
         version: v3.5.0-sc
         dataVolumeClaim:
           resources:
@@ -126,7 +137,7 @@ NebulaGraph Operator supports enabling mTLS with certificate hot-reloading. The 
             cpu: "1"
             memory: "1Gi"
         replicas: 1
-        image: reg.vesoft-inc.com/rc/nebula-storaged-ent
+        image: reg.vesoft-inc.com/xxx/xxx
         version: v3.5.0-sc
         dataVolumeClaims:
           - resources:
@@ -142,14 +153,14 @@ NebulaGraph Operator supports enabling mTLS with certificate hot-reloading. The 
       reference:
         name: statefulsets.apps
         version: v1
-      schedulerName: default-scheduler
+      schedulerName: nebula-scheduler
       imagePullPolicy: Always
       imagePullSecrets:
         - name: nebula-image
       enablePVReclaim: true
       topologySpreadConstraints:
       - topologyKey: "kubernetes.io/zone"
-        whenUnsatisfiable: "ScheduleAnyway"
+        whenUnsatisfiable: "DoNotSchedule"
     ```
 
 ??? info "View sample configurations of mTLS between services"
@@ -161,21 +172,28 @@ NebulaGraph Operator supports enabling mTLS with certificate hot-reloading. The 
       name: nebula
     spec:
       exporter:
-        image: vesoft/nebula-stats-exporter
+        image: vesoft/xxx
         replicas: 1
         maxRequests: 20
       sslCerts:
         clientSecret: "client-cert"
-        caSecret: "ca-cert" # The Secret name of the CA certificate.
+        caSecret: "ca-cert" 
         caCert: "root.crt"
       graphd:
         config:
+          # The following parameters are used to enable mTLS between services.
           ca_client_path: certs/root.crt
           ca_path: certs/root.crt
           cert_path: certs/server.crt
           key_path: certs/server.key
           enable_meta_ssl: "true"
           enable_storage_ssl: "true" 
+          # The following parameters are required for creating a cluster with Zones.
+          accept_partial_success: "true"
+          prioritize_intra_zone_reading: "true"
+          sync_meta_when_use_space: "true"
+          stick_to_intra_zone_on_failure: "false" 
+          session_reclaim_interval_secs: "300"
         initContainers:
           - name: init-auth-sidecar
             command:
@@ -215,10 +233,15 @@ NebulaGraph Operator supports enabling mTLS with certificate hot-reloading. The 
             cpu: "1"
             memory: "1Gi"
         replicas: 1
-        image: reg.vesoft-inc.com/rc/nebula-graphd-ent
+        image: reg.vesoft-inc.com/xxx/xxx
         version: v3.5.0-sc
       metad:
         config:
+          # Zone names CANNOT be modified once set.
+          # It's suggested to set an odd number of Zones.
+          zone_list: az1,az2,az3 
+          validate_session_timestamp: "false"
+          # The following parameters are used to enable mTLS between services.
           ca_client_path: certs/root.crt
           ca_path: certs/root.crt
           cert_path: certs/server.crt
@@ -260,7 +283,7 @@ NebulaGraph Operator supports enabling mTLS with certificate hot-reloading. The 
             cpu: "1"
             memory: "1Gi"
         replicas: 1
-        image: reg.vesoft-inc.com/rc/nebula-metad-ent
+        image: reg.vesoft-inc.com/xxx/xxx
         version: v3.5.0-sc
         dataVolumeClaim:
           resources:
@@ -274,6 +297,7 @@ NebulaGraph Operator supports enabling mTLS with certificate hot-reloading. The 
           storageClassName: local-path
       storaged:
         config:
+          # The following parameters are used to enable mTLS between services.
           ca_client_path: certs/root.crt
           ca_path: certs/root.crt
           cert_path: certs/server.crt
@@ -314,7 +338,7 @@ NebulaGraph Operator supports enabling mTLS with certificate hot-reloading. The 
             cpu: "1"
             memory: "1Gi"
         replicas: 1
-        image: reg.vesoft-inc.com/rc/nebula-storaged-ent
+        image: reg.vesoft-inc.com/xxx/xxx
         version: v3.5.0-sc
         dataVolumeClaims:
           - resources:
@@ -330,14 +354,14 @@ NebulaGraph Operator supports enabling mTLS with certificate hot-reloading. The 
       reference:
         name: statefulsets.apps
         version: v1
-      schedulerName: default-scheduler
+      schedulerName: nebula-scheduler
       imagePullPolicy: Always
       imagePullSecrets:
         - name: nebula-image
       enablePVReclaim: true
       topologySpreadConstraints:
-      - topologyKey: "kubernetes.io/hostname"
-        whenUnsatisfiable: "ScheduleAnyway"
+      - topologyKey: "kubernetes.io/zone"
+        whenUnsatisfiable: "DoNotSchedule"
     ```
 
 ### Configure `spec.<meta|graph|storage>.config`
