--- a/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
+++ b/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
@@ -49,49 +49,12 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
 
 3. Create a file named `apps_v1alpha1_nebulacluster.yaml`.
 
-  - For a NebulaGraph Community cluster
-  
-    For the file content, see the [sample configuration](https://github.com/vesoft-inc/nebula-operator/blob/v{{operator.release}}/config/samples/apps_v1alpha1_nebulacluster.yaml).
-
-    ??? Info "Expand to show sample parameter descriptions"
-
-        | Parameter    | Default value  | Description    |
-        | :---- | :--- | :--- |
-        | `metadata.name`              | -                                                            | The name of the created NebulaGraph cluster. |
-        |`spec.console`|-| Configuration of the Console service. For details, see [nebula-console](https://github.com/vesoft-inc/nebula-operator/blob/v{{operator.release}}/doc/user/nebula_console.md#nebula-console).|
-        | `spec.graphd.replicas`       | `1`                                                          | The numeric value of replicas of the Graphd service.         |
-        | `spec.graphd.image`         | `vesoft/nebula-graphd`                                       | The container image of the Graphd service.      |
-        | `spec.graphd.version`        | `{{nebula.tag}}`                                          | The version of the Graphd service.         |
-        | `spec.graphd.service`        | -                                                            | The Service configurations for the Graphd service.      |
-        | `spec.graphd.logVolumeClaim.storageClassName`   | -                                         | The log disk storage configurations for the Graphd service.         |
-        | `spec.metad.replicas`        | `1`                                                          | The numeric value of replicas of the Metad service.          |
-        | `spec.metad.image`          | `vesoft/nebula-metad`                                        | The container image of the Metad service.        |
-        | `spec.metad.version`         | `{{nebula.tag}}`                                          | The version of the Metad service.          |
-        | `spec.metad.dataVolumeClaim.storageClassName`    | -                                        | The data disk storage configurations for the Metad service.          |
-        | `spec.metad.logVolumeClaim.storageClassName`|-                                              | The log disk storage configurations for the Metad service.|
-        | `spec.storaged.replicas`     | `3`                                                          | The numeric value of replicas of the Storaged service.       |
-        | `spec.storaged.image`       | `vesoft/nebula-storaged`                                     | The container image of the Storaged service.     |
-        | `spec.storaged.version`      | `{{nebula.tag}}`                                          | The version of the Storaged service.       |
-        | `spec.storaged.dataVolumeClaims.resources.requests.storage` | - | Data disk storage size for the Storaged service. You can specify multiple data disks to store data. When multiple disks are specified, the storage path is `/usr/local/nebula/data1`, `/usr/local/nebula/data2`, etc.|
-        | `spec.storaged.dataVolumeClaims.resources.storageClassName` | - | The data disk storage configurations for Storaged. If not specified, the global storage parameter is applied. |
-        | `spec.storaged.logVolumeClaim.storageClassName`|-                                           | The log disk storage configurations for the Storaged service.|
-        | `spec.storaged.enableAutoBalance` | `true` |Whether to balance data automatically. |
-        |`spec.agent`|`{}`| Configuration of the Agent service. This is used for backup and recovery as well as log cleanup functions. If you do not customize this configuration, the default configuration will be used.|
-        | `spec.reference.name`        | -                                                            | The name of the dependent controller.           |
-        | `spec.schedulerName`         | -                                                            | The scheduler name.                 |
-        | `spec.imagePullPolicy`       | The image policy to pull the NebulaGraph image. For details, see [Image pull policy](https://kubernetes.io/docs/concepts/containers/images/#image-pull-policy). | The image pull policy in Kubernetes.               |
-        |`spec.logRotate`| - |Log rotation configuration. For more information, see [Manage cluster logs](../8.custom-cluster-configurations/8.4.manage-running-logs.md).|
-        |`spec.enablePVReclaim`|`false`|Define whether to automatically delete PVCs and release data after deleting the cluster. For more information, see [Reclaim PVs](../8.custom-cluster-configurations/8.2.pv-reclaim.md).|
 
   {{ ent.ent_begin }}
 
-  - For a NebulaGraph Enterprise cluster
+  - To create a NebulaGraph Enterprise cluster
 
     Contact our sales team to get a complete NebulaGraph Enterprise Edition cluster YAML example.
-
-    !!! enterpriseonly
-
-        Make sure that you have access to NebulaGraph Enterprise Edition images before pulling the image. 
 
     === "Cluster without Zones"
 
@@ -100,7 +63,7 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
 
         | Parameter    | Default value  | Description    |
         | :---- | :--- | :--- |
-        | `spec.metad.licenseManagerURL` | - | Configure the URL that points to the LM, which consists of the access address and port number (default port `9119`) of the LM. For example, `192.168.8.100:9119`. **You must configure this parameter in order to obtain the license information; otherwise, the enterprise edition cluster cannot be used.** |
+        | `spec.metad.licenseManagerURL` | - | Configure the URL that points to the LM, which consists of the access address and port number (default port `9119`) of the LM. For example, `192.168.8.xxx:9119`. **You must configure this parameter in order to obtain the license information; otherwise, the enterprise edition cluster cannot be used.** |
         |`spec.<graphd|metad|storaged>.image`|-|The container image of the Graph, Meta, or Storage service of the enterprise edition.|
         |`spec.imagePullSecrets`| - |Specifies the Secret for pulling the NebulaGraph Enterprise service images from a private repository.|
 
@@ -109,7 +72,7 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
 
         NebulaGraph Operator supports creating a cluster with [Zones](../../4.deployment-and-installation/5.zone.md). 
 
-        ??? info "Expand to view sample cluster configurations"
+        ??? info "Expand to view sample configurations of a cluster with Zones"
 
             ```yaml
             apiVersion: apps.nebula-graph.io/v1alpha1
@@ -119,15 +82,15 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
               namespace: default
             spec:
               # Used to obtain the Zone information where nodes are located.
-              alpineImage: "reg.vesoft-inc.com/cloud-dev/nebula-alpine:latest"
+              alpineImage: "reg.vesoft-inc.com/xxx/xxx:latest"
               # Used for backup and recovery as well as log cleanup functions. 
               # If you do not customize this configuration,
               # the default configuration will be used.
               agent:
-                image: reg.vesoft-inc.com/cloud-dev/nebula-agent
+                image: reg.vesoft-inc.com/xxx/xxx
                 version: v3.6.0-sc
               exporter:
-                image: vesoft/nebula-stats-exporter
+                image: vesoft/xxx
                 replicas: 1
                 maxRequests: 20
               # Used to create a console container,
@@ -154,7 +117,7 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
                     cpu: "2"
                     memory: "2Gi"
                 replicas: 1
-                image: reg.vesoft-inc.com/rc/nebula-graphd-ent
+                image: reg.vesoft-inc.com/xxx/xxx
                 version: v3.5.0-sc
               metad:
                 config:
@@ -175,7 +138,7 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
                     cpu: "1"
                     memory: "1Gi"
                 replicas: 3
-                image: reg.vesoft-inc.com/rc/nebula-metad-ent
+                image: reg.vesoft-inc.com/xxx/xxx
                 version: v3.5.0-sc
                 dataVolumeClaim:
                   resources:
@@ -195,7 +158,7 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
                     cpu: "2"
                     memory: "2Gi"
                 replicas: 3
-                image: reg.vesoft-inc.com/rc/nebula-storaged-ent
+                image: reg.vesoft-inc.com/xxx/xxx
                 version: v3.5.0-sc
                 dataVolumeClaims:
                 - resources:
@@ -227,7 +190,7 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
 
         | Parameter    | Default value  | Description    |
         | :---- | :--- | :--- |
-        | `spec.metad.licenseManagerURL` | - | Configure the URL that points to the LM, which consists of the access address and port number (default port `9119`) of the LM. For example, `192.168.8.100:9119`. **You must configure this parameter in order to obtain the license information; otherwise, the enterprise edition cluster cannot be used.** |
+        | `spec.metad.licenseManagerURL` | - | Configure the URL that points to the LM, which consists of the access address and port number (default port `9119`) of the LM. For example, `192.168.8.xxx:9119`. **You must configure this parameter in order to obtain the license information; otherwise, the enterprise edition cluster cannot be used.** |
         |`spec.<graphd|metad|storaged>.image`|-|The container image of the Graph, Meta, or Storage service of the enterprise edition.|
         |`spec.imagePullSecrets`| - |Specifies the Secret for pulling the NebulaGraph Enterprise service images from a private repository.|
         |`spec.alpineImage`|`reg.vesoft-inc.com/nebula-alpine:latest`|The Alpine Linux image, used to obtain the Zone information where nodes are located.| 
@@ -290,6 +253,41 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
         |`spec.graphd.enable_graph_ssl`|`false`| Specifies whether to enable SSL for the Graph service. For more details, see [Enable mTLS](../8.custom-cluster-configurations/8.5.enable-ssl.md). |
 
   {{ ent.ent_end }}
+
+  - To create a NebulaGraph Community cluster
+  
+    See [community cluster configurations](https://github.com/vesoft-inc/nebula-operator/blob/v{{operator.release}}/config/samples/apps_v1alpha1_nebulacluster.yaml).
+
+    ??? Info "Expand to show parameter descriptions of community clusters"
+
+        | Parameter    | Default value  | Description    |
+        | :---- | :--- | :--- |
+        | `metadata.name`              | -                                                            | The name of the created NebulaGraph cluster. |
+        |`spec.console`|-| Configuration of the Console service. For details, see [nebula-console](https://github.com/vesoft-inc/nebula-operator/blob/v{{operator.release}}/doc/user/nebula_console.md#nebula-console).|
+        | `spec.graphd.replicas`       | `1`                                                          | The numeric value of replicas of the Graphd service.         |
+        | `spec.graphd.image`         | `vesoft/nebula-graphd`                                       | The container image of the Graphd service.      |
+        | `spec.graphd.version`        | `{{nebula.tag}}`                                          | The version of the Graphd service.         |
+        | `spec.graphd.service`        | -                                                            | The Service configurations for the Graphd service.      |
+        | `spec.graphd.logVolumeClaim.storageClassName`   | -                                         | The log disk storage configurations for the Graphd service.         |
+        | `spec.metad.replicas`        | `1`                                                          | The numeric value of replicas of the Metad service.          |
+        | `spec.metad.image`          | `vesoft/nebula-metad`                                        | The container image of the Metad service.        |
+        | `spec.metad.version`         | `{{nebula.tag}}`                                          | The version of the Metad service.          |
+        | `spec.metad.dataVolumeClaim.storageClassName`    | -                                        | The data disk storage configurations for the Metad service.          |
+        | `spec.metad.logVolumeClaim.storageClassName`|-                                              | The log disk storage configurations for the Metad service.|
+        | `spec.storaged.replicas`     | `3`                                                          | The numeric value of replicas of the Storaged service.       |
+        | `spec.storaged.image`       | `vesoft/nebula-storaged`                                     | The container image of the Storaged service.     |
+        | `spec.storaged.version`      | `{{nebula.tag}}`                                          | The version of the Storaged service.       |
+        | `spec.storaged.dataVolumeClaims.resources.requests.storage` | - | Data disk storage size for the Storaged service. You can specify multiple data disks to store data. When multiple disks are specified, the storage path is `/usr/local/nebula/data1`, `/usr/local/nebula/data2`, etc.|
+        | `spec.storaged.dataVolumeClaims.resources.storageClassName` | - | The data disk storage configurations for Storaged. If not specified, the global storage parameter is applied. |
+        | `spec.storaged.logVolumeClaim.storageClassName`|-                                           | The log disk storage configurations for the Storaged service.|
+        | `spec.storaged.enableAutoBalance` | `true` |Whether to balance data automatically. |
+        |`spec.agent`|`{}`| Configuration of the Agent service. This is used for backup and recovery as well as log cleanup functions. If you do not customize this configuration, the default configuration will be used.|
+        | `spec.reference.name`        | -                                                            | The name of the dependent controller.           |
+        | `spec.schedulerName`         | -                                                            | The scheduler name.                 |
+        | `spec.imagePullPolicy`       | The image policy to pull the NebulaGraph image. For details, see [Image pull policy](https://kubernetes.io/docs/concepts/containers/images/#image-pull-policy). | The image pull policy in Kubernetes.               |
+        |`spec.logRotate`| - |Log rotation configuration. For more information, see [Manage cluster logs](../8.custom-cluster-configurations/8.4.manage-running-logs.md).|
+        |`spec.enablePVReclaim`|`false`|Define whether to automatically delete PVCs and release data after deleting the cluster. For more information, see [Reclaim PVs](../8.custom-cluster-configurations/8.2.pv-reclaim.md).|
+
 
 1. Create a NebulaGraph cluster.
 
