--- a/docs-2.0/7.data-security/4.ssl.md
+++ b/docs-2.0/7.data-security/4.ssl.md
@@ -22,11 +22,11 @@ To use SSL encryption, SSL certificates are required. NebulaGraph supports two c
 
 |Scenes | TLS |mTLS |
 |:---|:---|:--|
-|External device access to Graph| Modify the Graph configuration file to add the following parameters:</br>`--enable_graph_ssl = true`</br> `--ca_path=xxxxxx`</br>`--cert_path=xxxxxx`</br>`--key_path=xxxxxx`|Modify the Graph configuration file to add the following parameters:</br>`--enable_graph_ssl = true`</br> `--ca_path=xxxxxx`</br>`--cert_path=xxxxxx`</br>`--key_path=xxxxxx`</br>`--ca_client_path=xxxxxx`|
+|External device access Graph| Modify the Graph configuration file to add the following parameters:</br>`--enable_graph_ssl = true`</br> `--ca_path=xxxxxx`</br>`--cert_path=xxxxxx`</br>`--key_path=xxxxxx`|Modify the Graph configuration file to add the following parameters:</br>`--enable_graph_ssl = true`</br> `--ca_path=xxxxxx`</br>`--cert_path=xxxxxx`</br>`--key_path=xxxxxx`</br>`--ca_client_path=xxxxxx`|
 |Graph access Meta |In the Graph/Meta configuration file, add the following parameters:</br>`--enable_meta_ssl = true`</br>`--ca_path=xxxxxx`</br>`--cert_path=xxxxxx`</br>`--key_path=xxxxxx` |In the Graph/Meta configuration file, add the following parameters:</br>`--enable_meta_ssl = true`</br>`--ca_path=xxxxxx`</br>`--cert_path=xxxxxx`</br>`--key_path=xxxxxx`</br>`--ca_client_path=xxxxxx` |
 |Graph access Storage</br>Meta access Storage |In the Graph/Meta/Storage configuration file, add the following parameters:</br>`--enable_storage_ssl = true`</br>`--ca_path=xxxxxx`</br>`--cert_path=xxxxxx`</br>`--key_path=xxxxxx` |In the Graph/Meta/Storage configuration file, add the following parameters:</br>`--enable_storage_ssl = true`</br>`--ca_path=xxxxxx`</br>`--cert_path=xxxxxx`</br>`--key_path=xxxxxx`</br>`--ca_client_path=xxxxxx` |
-|Graph access Meta/Storage</br>Meta access Storage |In the Graph/Meta/Storage configuration file, add the following parameters:</br>`--enable_meta_ssl = true`</br>`--enable_storage_ssl = true`</br>`--ca_path=xxxxxx`</br>`--cert_path=xxxxxx`</br>`--key_path=xxxxxx` |In the Graph/Meta/Storage configuration file, add the following parameters:</br>`--enable_meta_ssl = true`</br>`--enable_storage_ssl = true`</br>`--ca_path=xxxxxx`</br>`--cert_path=xxxxxx`</br>`--key_path=xxxxxx`</br>`--ca_client_path=xxxxxx` |
-|External device access to Graph</br>Graph access Meta/Storage</br>Meta access Storage |In the Graph/Meta/Storage configuration file, add the following parameters:</br>`--enable_ssl = true`</br>`--ca_path=xxxxxx`</br>`--cert_path=xxxxxx`</br>`--key_path=xxxxxx` |In the Graph/Meta/Storage configuration file, add the following parameters:</br>`--enable_ssl = true`</br>`--ca_path=xxxxxx`</br>`--cert_path=xxxxxx`</br>`--key_path=xxxxxx`</br>`--ca_client_path=xxxxxx` |
+|Graph access Meta/Storage</br>Meta access Storage</br>Storage access Meta |In the Graph/Meta/Storage configuration file, add the following parameters:</br>`--enable_meta_ssl = true`</br>`--enable_storage_ssl = true`</br>`--ca_path=xxxxxx`</br>`--cert_path=xxxxxx`</br>`--key_path=xxxxxx` |In the Graph/Meta/Storage configuration file, add the following parameters:</br>`--enable_meta_ssl = true`</br>`--enable_storage_ssl = true`</br>`--ca_path=xxxxxx`</br>`--cert_path=xxxxxx`</br>`--key_path=xxxxxx`</br>`--ca_client_path=xxxxxx` |
+|External device access to Graph</br>Graph access Meta/Storage</br>Meta access Storage</br>Storage access Meta |In the Graph/Meta/Storage configuration file, add the following parameters:</br>`--enable_ssl = true`</br>`--ca_path=xxxxxx`</br>`--cert_path=xxxxxx`</br>`--key_path=xxxxxx` |In the Graph/Meta/Storage configuration file, add the following parameters:</br>`--enable_ssl = true`</br>`--ca_path=xxxxxx`</br>`--cert_path=xxxxxx`</br>`--key_path=xxxxxx`</br>`--ca_client_path=xxxxxx` |
 
 !!! note
 
